
	* e-msg-composer.c (add_attachments_handle_mime_part): added
	related argument, TRUE means that container of mime_part is
	multipart/related
	(add_attachments_handle_mime_part): add images as inline when
	related is TRUE
	(add_attachments_from_multipart): pass related to
	add_attachments_handle_mime_part

2003-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment.glade: Change the order of the
	ok/cancel buttons.

2003-04-19  Chris Toshok  <toshok@ximian.com>

	[ fixes #40694 ]
	* e-msg-composer-hdrs.c (create_addressbook_entry): this can't
	hurt - set the frame to autoactivate so if by some chance the
	widget is focused the control will end up being activated.

	* e-msg-composer.c (map_default_cb): activate the To: control
	instead of focusing the widget.

2003-04-18  Rodney Dawes  <dobey@ximian.com>

	* Makefile.am:
	* e-msg-composer.c:
	Use PREFIX instead of EVOLUTION_DATADIR for bonobo_ui_util_set_ui ().
	Fixes bug #21499.
	
2003-04-14  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment.c (file_name_focus_out_cb): Return
	FALSE so the signal gets propogated further up the chain. Fixes
	bug #41238.
	(e_msg_composer_attachment_edit): The focus-out-event signal name
	changed (although the old name still works...for now?).

2003-04-11  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment.glade: Updated to comply with the
	HIG. Fixes bug #41239 and bug #41241.

2003-04-09  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (composer_get_default_charset_setting): Use
	e_iconv_locale_charset() instead of e_iconv_locale_name(), dunno
	what I was thinking. locale_name() doesn't even exist.
	(setup_ui): Don't free the default_charset, it's a const char*.

	* e-msg-composer-attachment-bar.c (get_default_charset): Same.

2003-04-09  Chris Toshok  <toshok@ximian.com>

	* e-msg-composer.c (setup_ui): fix build, it's
	composer_get_default_charset_setting.

2003-04-09  Jeffrey Stedfast  <fejj@ximian.com>
